--- a/src/activity/main.kv
+++ b/src/activity/main.kv
@@ -1,5 +1,6 @@
 #:kivy 2.0.0
 #:include activity/tab.kv
+#:include activity/teambuilder.kv
 #:import DrawerList graphics.widget.DrawerList
 
 #<ItemDrawer@OneLineIconListItem>:
@@ -23,6 +24,10 @@
     avatar: avatar.__self__
     username: username.__self__
 
+    client_screen_manager: client_screen_manager.__self__
+    dashboard: dashboard.__self__
+    teambuilder: teambuilder.__self__
+
     on_receiving_updateuser:
         user = args[1].user
         avatar.source = "sprite/trainer/" + user.avatar + ".png"
@@ -34,11 +39,18 @@
 
     ScreenManager:
         id: client_screen_manager
+        name: "client_screen_manager"
 
         DashboardScreen:
             id: dashboard
             name: "dashboard"
-            manager: "client_screen_manager"
+            manager: client_screen_manager
+            web_app: app.web_app
+
+        TeamBuilderScreen:
+            id: teambuilder
+            name: "teambuilder"
+            manager: client_screen_manager
             web_app: app.web_app
 
     Label:
@@ -92,7 +104,20 @@
                     id: md_list
 
                     OneLineIconListItem:
+                        text: "Home"
+
+                        on_press:
+                            client_screen_manager.switch_to(dashboard)
+
+                        IconLeftWidget:
+                            icon: "home"
+
+                    OneLineIconListItem:
                         text: "TeamBuilder"
+
+                        on_press:
+                            client_screen_manager.switch_to(teambuilder)
+
                         IconLeftWidget:
                             icon: "folder"
 
