feat: Add team selection
Signed-off-by: Iltotore <rafbodaha@gmail.com>

--- a/src/activity/main.kv
+++ b/src/activity/main.kv
@@ -1,5 +1,5 @@
 #:kivy 2.0.0
-#:include activity/tab.kv
+#:include activity/dashboard.kv
 #:include activity/teambuilder.kv
 #:import DrawerList graphics.widget.DrawerList
 
