--- a/src/activity/teambuilder.kv
+++ b/src/activity/teambuilder.kv
@@ -10,10 +10,10 @@
     color: 1, 1, 1
     radius: 0,
 
-<PokemonEntry@BoxLayout>: # Apparence ici
+#<PokemonEntry@BoxLayout>: # Apparence ici
 
 
 <TeamBuilderScreen@ShowdownScreen>:
     BoxLayout:
         id: pokemons
-        PokemonEntry: # Position d'une entrée ENTIERE
+        #PokemonEntry: # Position d'une entrée ENTIERE
