style: Set "unknown" as default avatar
Signed-off-by: Iltotore <rafbodaha@gmail.com>

--- a/src/activity/main.kv
+++ b/src/activity/main.kv
@@ -98,7 +98,7 @@
                 Image:
                     id: avatar
                     size_hint: 0.5, 1
-                    source: "sprite/trainer/red.png"
+                    source: "sprite/trainer/unknown.png"
 
 
             MDLabel:
